# sonic-psu-grpc

./: README.md  client.py  generate_proto.sh  psu_service.proto  server.py
rust-client/: Cargo.toml  README.md  build.rs
rust-client/src/: main.rs
